--- a/notes/derivatives2.tex
+++ b/notes/derivatives2.tex
@@ -473,12 +473,9 @@ differentiation theorems proved above:
 \item $(f\circ g)'(a)=f'(g(a))\cdot g'(a)$.
 \end{enumerate}
 
-Spivak deals with a lot of trig here, and we will too. However, in
-this chapter we can treat $\sin$ and $\cos$ as black boxes. In the
-next chapter we'll look at trig functions in more detail. For now, all
-we need to know is the two trig derivatives presented below without
-proof (proper proofs will show up in an even later chapter when $\sin$
-and $\cos$ are formally defined):
+You also need to know two trig derivatives presented below without
+proof (proper proofs will show up in a later chapter when $\sin$ and
+$\cos$ are formally defined):
 \begin{align*}
   \sin'(a)&=\cos a\\
   \cos'(a)&=-\sin a
@@ -543,6 +540,72 @@ And finally a composition of four functions:
   &\implies f'(x)=2\sin(\sin(\sin x))\cdot \cos(\sin(\sin x))\cdot \cos(\sin
     x)\cdot \cos x
 \end{align*}
+
+\subsection{Sine polynomials}
+
+I don't think ``sine polynomials'' is a real name, but I needed a
+clever name for this section. Here we explore derivatives of functions
+of the form $x^k\sin \frac{1}{x}$.
+
+\vs
+
+\textbf{Claim 1:} Let
+\[f(x)=\begin{cases}
+  x\sin \frac{1}{x},&x\neq0\\
+  0,&x=0
+\end{cases}\]
+
+Then $f$ is not differentiable at $0$.
+
+\vs
+
+\textbf{Proof.} Using derivative definition:
+\[\lim_{h\to0}\frac{f(0+h)-f(0)}{h}=\lim_{h\to0}\frac{h\sin
+    \frac{1}{h}-0}{h}=\lim_{h\to0}\sin \frac{1}{h}\]
+
+We saw in \ref{limits-claim-2} that $\lim_{h\to0}\sin \frac{1}{h}$ does
+not exist. Thus $f$ is not differentiable at zero.
+
+\vs---\vs
+
+\textbf{Claim 2:} Let
+\[f(x)=\begin{cases}
+  x^2\sin \frac{1}{x},&x\neq0\\
+  0,&x=0
+\end{cases}\]
+
+Then $f$ is differentiable at $0$.
+
+\vs
+
+\textbf{Proof.} Using derivative definition:
+\[\lim_{h\to0}\frac{f(0+h)-f(0)}{h}=\lim_{h\to0}\frac{h^2\sin
+    \frac{1}{h}-0}{h}=\lim_{h\to0}h\sin \frac{1}{h}=0\]
+
+Thus $f'(0)=0$.
+
+\vs---\vs
+
+\textbf{Claim 3:} Let
+\[f(x)=\begin{cases}
+  x^2\sin \frac{1}{x},&x\neq0\\
+  0,&x=0
+\end{cases}\]
+
+Then $f'$ is not differentiable at $0$.
+
+\vs
+
+\textbf{Proof.} Observe that:
+\[f'(x)=\begin{cases}
+  2x\sin \frac{1}{x}-\cos \frac{1}{x},&x\neq0\\
+  0,&x=0
+\end{cases}\]
+
+Observe that $\lim_{x\to0}\cos \frac{1}{x}$ does not exist (for the same
+reason $\lim_{x\to0}\sin \frac{1}{x}$ does not exist). Thus
+$\lim_{x\to0}f'(x)$ does not exist. And thus $f'$ is not continuous, let
+alone differentiable at $0$.
 
 %%% Local Variables:
 %%% TeX-master: "notes"
