--- a/hw/ch10.tex
+++ b/hw/ch10.tex
@@ -45,6 +45,13 @@ in$^{2}$. The rate of change of the area of the larger circle is
 $10\pi$ in$^2/\sec$. How fast is the circumference of the smaller circle
 changing when it has area of $16\pi$ in$^2$?
 
+\vs---\vs
+
+Let $r_1(t)<r_2(t)$ denote the radius of each circle at time $t$. Then
+$A_i(t)=\pi r_i(t)^2$ is the area of each circle. We know
+$A_2(t)-A_1(t)=9\pi$. We also know $A_2'(t)=2\pi r_2(t)r_2'(t)=10\pi$. When
+$A_1(t)=\pi r_1(t)^2=16\pi$, it follows $r_1(t)=4$.
+
 \subsection*{Problem 9}
 Particle $A$ moves along the positive horizontal axis, and particle
 $B$ along the graph of $f(x)=-\sqrt{3}x,x\leq0$. At a certain time,
