--- a/notes/derivatives3.tex
+++ b/notes/derivatives3.tex
@@ -220,8 +220,22 @@ sections we will refine this understanding as we deal with physical
 problems involving the derivative.
 
 \subsection{Implicit differentiation}
+Suppose we have an equation for a unit circle $x^2+y^2=1$, and we want
+to know $y$ changes with $x$. We will solve this problem in two ways.
+First, using a ``brute force'' approach by explicitly solving for $y$
+and then differentiating. Second, using a technique called
+\textit{implicit differentiation} that considerably simplifies the
+problem.
 
-\subsection{Notation practice}
+\subsubsection*{Brute force approach}
+With the brute force approach we solve for $y$ and differentiate.
+Observe that $y^2=1-x^2$, and thus
+
+\[y=\sqrt{1-x^2}\qquad\text{and}\qquad y=-\sqrt{1-x^2}\]
+
+\subsubsection*{Implicit differentiation approach}
+
+\subsection{Related rates}
 
 
 %%% Local Variables:
