--- a/notes/preface.tex
+++ b/notes/preface.tex
@@ -13,6 +13,7 @@ properly understand the damned thing.
 
 Some departures from the structure of Spivak's text:
 \begin{itemize}
+\item I start with limits here.
 \item The very first chapter in these notes covers prerequisites
   necessary to study limits-- some really basic limits intuitions, and
   material on bounding values with inequalities.
