--- a/notes/preface.tex
+++ b/notes/preface.tex
@@ -37,7 +37,7 @@ Some departures from the structure of Spivak's text:
   I then introduce and prove IVT and EVT, and finally cover their
   consequences. IMO this approach is much less confusing than
   Spivak's.
-\item Spivak covers variations of trigonometric functions as he goes
+\item Spivak covers various of trigonometric functions as he goes
   through the book. In the early chapters I found it distracting as I
   didn't know any trig. I eventually buckled down and learned enough,
   and then revisited everything I skipped. I go through this exercise
