--- a/notes/limits0.tex
+++ b/notes/limits0.tex
@@ -1,5 +1,5 @@
 
-\section{Limits, Part I (Prereqs)}
+\section{Limits, Part 0 (Prereqs)}
 
 Before we formally define limits, it helps to have a handwavy
 intuition for limits mechanics, and to understand inequalities. In
