--- a/notes/derivatives2a.tex
+++ b/notes/derivatives2a.tex
@@ -1,5 +1,5 @@
 
-\section{Derivatives, Part II (Differentiation)}
+\section{Derivatives, Part IIa (Differentiation)}
 
 \subsection{Basic proofs}
 
