--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -31,11 +31,11 @@
 \clearpage
 \input{trig.tex}
 \clearpage
-\input{derivatives2.tex}
+\input{derivatives2a.tex}
+\clearpage
+\input{derivatives2b.tex}
 \clearpage
 \input{derivatives3.tex}
-\clearpage
-\input{derivatives4.tex}
 
 \end{document}
 
