done with derivatives chapter

--- a/notes/derivatives2b.tex
+++ b/notes/derivatives2b.tex
@@ -252,20 +252,16 @@ thing we'll do is take a derivative of each side of the equations:
 Now $\frac{dx^2}{dx}=2x$ by a straightforward application of
 differentiation theorem 6. But what about $\frac{dy^2}{dx}$? This
 would tell us how $y^2$ changes with changes in $x$ (\textit{not} with
-changes in $y$), but how to do determine that is not obvious. And so
-we use the chain rule:\footnote{This is very handwavy and I'm running
-  out of steam. Spivak discusses implicit differentiation in his
-  chapter on inverse functions, so I expect to come back to this topic
-later.}
+changes in $y$), but how to determine that is not obvious. And so we
+use the chain rule:\footnote{This is very handwavy and I'm running out
+  of steam. Spivak discusses implicit differentiation in his chapter
+  on inverse functions, so I expect to come back to this topic later.}
 
 \begin{align*}
   &2x+\frac{dy^2}{dy}\cdot \frac{dy}{dx}=0\\
   &\implies 2x+2y\cdot \frac{dy}{dx}=0\\
   &\implies \frac{dy}{dx}=\frac{-2x}{2y}=-\frac{x}{y}
 \end{align*}
-
-\subsection{Related rates}
-
 
 %%% Local Variables:
 %%% TeX-master: "notes"
