cleaning up chapter

--- a/notes/derivatives2b.tex
+++ b/notes/derivatives2b.tex
@@ -41,8 +41,8 @@ notation for its derivative $f'$ is:
 
 Intuitively, we can think of $d$ in a historical context as ``delta''
 or ``change''. Then we can interpret this notation as Leibniz did-- a
-quotient of a tiny change in $f(x)$ and a tiny change in $x$. However,
-this explanation comes with two important disclaimers.
+quotient of a tiny change in $f(x)$ and a tiny change in $x$. But this
+explanation comes with two important disclaimers.
 
 \vs
 
@@ -200,7 +200,7 @@ How about a more complicated chain $z=\sin v, v=\cos u, u=\sin x$?
 Now, there are a bunch of notational liberties here:
 \begin{itemize}
 \item $y=\ldots$ implicitly defines a function $y(x)$ which is then used in
-  e.g. $\frac{dy}{dx}$. But $y$ can also be references as a value
+  e.g. $\frac{dy}{dx}$. But $y$ can also be referenced as a value
   (e.g. ``plot $y$ when $x$ is $\ldots$''). So the deliniation between
   functions and the values they take on is blurred.
 \item $dz$ on the left side of the equations (e.g. in $\frac{dz}{dx}$)
@@ -215,8 +215,8 @@ Now, there are a bunch of notational liberties here:
 \end{itemize}
 
 Despite all these quirks and ambiguities, with some practice we begin
-to see how easy and useful the Leibniz notation is. In the next two
-sections we will refine this understanding as we deal with physical
+to see how easy and useful the Leibniz notation is. In the next
+section we will refine this understanding as we deal with physical
 problems involving the derivative.
 
 \subsection{Implicit differentiation}
