--- a/hw/ch10.tex
+++ b/hw/ch10.tex
@@ -83,6 +83,30 @@ $B$ is at a distance of 3 units from the origin and moving with speed
 $4$ units/sec. At what rate is the distance between $A$ and $B$
 changing?
 
+\vs---\vs
+
+Let $x_A$ be the $x$ coordinate of particle $A$, and let $x_B$ be the
+$x$ coordinate of the particle $B$. Then the distance between $A$ and
+$B$ is $\sqrt{(x_A-x_B)^2 + f(x_B)^2}$. Therefore:
+\begin{align*}
+  \frac{d\sqrt{(x_A-x_B)^2 +
+  (f(x_B)-0)^2}}{dt}=\frac{d((x_A-x_B)^2+3x_B^2)^{\frac{1}{2}}}{dt}\\
+  =\frac{1}{2}((x_A-x_B)^2+3x_B^2)^{-\frac{1}{2}}\cdot(2(x_A-x_B)\cdot(\frac{x_A-x_B}{dt})+6x_B\cdot
+                      \frac{dx_B}{dt})
+\end{align*}
+
+If $B$ is at a distance of 3 units from origin then $9=x^2+3x^2=4x^2$
+and thus $x_B=-\frac{3}{2}$. We also know
+\[4=\frac{(x^2+3x^2)^{\frac{1}{2}}}{dt}=\frac{1}{2}(x^2+3x^2)^{-\frac{1}{2}}(2x+6x)\frac{dx}{dt}=\frac{1}{2}\frac{1}{\sqrt{4x^2}}8x
+  \frac{dx}{dt}=2 \frac{dx}{dt}\]
+thus $\frac{dx}{dt}=2$.
+
+\vs
+
+Plugging in all the value, the rate of change between $A$ and $B$ is
+$\frac{83}{14}$.
+
+
 %%% Local Variables:
 %%% TeX-master: "hw"
 %%% End:
