starting to write chapter 11

--- a/notes/derivatives3.tex
+++ b/notes/derivatives3.tex
@@ -1,6 +1,52 @@
 
 \section{Derivatives, Part III (Consequences)}
 
+\subsection{Maxima and manima, part I}
+We start with some definitions. Let $f$ be a function and $A$ a set of
+numbers contained in $f$'s domain.\footnote{$A$ need not have any
+  additional properties. E.g. it may have holes, etc.} Then:
+
+\vs
+
+\textbf{Definition.} A point $x$ in $A$ is a \textbf{maximum
+  point} for $f$ on $A$ if
+\[f(x)\geq f(y)\qquad\text{for every $y$ in $A$}\]
+
+\textbf{Definition.} A point $x$ in $A$ is a \textbf{local maximum
+  point} for $f$ on $A$ if there is some $\delta>0$ such that $x$ is a
+maximum point for $f$ on $A\cap(x-\delta, x+\delta)$.
+
+\vs
+
+\textbf{Definition.} A \textbf{critical point} of $f$ is a number $x$
+such that $f'(x)=0$.\footnote{If $x$ is a maximum and/or critical
+  point, then $f(x)$ is called a maximum and/or critical value of
+  $f$.}
+
+\vs---\vs
+
+\textbf{Theorem 1.} Let $f$ be any function defined on $(a,b)$. If $x$
+is a maximum (or minimum) point for $f$ on $(a,b)$, and $f$ is
+differentiable at $x$, then $f'(x)=0$.
+
+\vs
+
+\textit{Intuitively,} maximum and minimum points are also critical
+points (but \textbf{not} the other way around-- $f(x)=x^3$ has
+$f'(0)=0$ as an obvious counterexample\footnote{In this case this
+  critical point is called the \textbf{saddle point}.}).
+
+\vs
+
+\textbf{Proof.}
+
+\subsection{Mean value theorem}
+\subsection{Increasing and decreasing functions}
+\subsection{Graph sketching}
+\subsection{Maxima and manima, part II}
+\subsection{L'H\^opital's rule}
+\subsection{Convexity and concavity}
+
 %%% Local Variables:
 %%% TeX-master: "notes"
 %%% End:
