--- a/notes/limits2.tex
+++ b/notes/limits2.tex
@@ -83,7 +83,7 @@ $|f(x)-L|\geq\frac{1}{10}$.
 
 Thus $\lim_{x\to a}f(x)$ does not exist for any $a$, as desired.
 
-\subsection{One-sided limits}
+\subsection{One-sided limits}\label{subsec:onesided-limits}
 We have seen that the following function has no limit approaching $0$:
 \[
 f(x) = 
@@ -102,20 +102,20 @@ notation for this exists:
 If we take $l=-1$, this notation compiles down to the following
 definition. For every $\epsilon>0$ there exists $\delta>0$ such that
 $0<a-x<\delta$ implies $|f(x)-l|<\epsilon$ for all $x$. This is our usual limit
-definition, except instead of looking at both sides of $a$ we say
-$x<a$ (i.e. we look from left of $a$).
+definition, except instead of looking at both sides of $a$, the
+inequality $0<a-x$ says $x<a$ (i.e. we look from left of $a$).
 
 \vs
 
-Second, intuitively $f$ approaches $11$ as we approach zero from the
+Second, intuitively $f$ approaches $1$ as we approach zero from the
 right (from ``above''). The notation for this is:
 \[\lim_{x\to0^+}f(x)=1\]
 
 If we take $l=1$, the definition is as follows. For every $\epsilon>0$ there
 exists $\delta>0$ such that $0<x-a<\delta$ implies $|f(x)-l|<\epsilon$ for all
 $x$. Again, this is our usual limit definition, except instead of
-looking at both sides of $a$ we say $x>a$ (i.e. we look from right of
-$a$).
+looking at both sides of $a$, the inequality $0<x-a$ says $x>a$ (i.e.
+we look from right of $a$).
 
 \subsection{Limits at infinity}
 Consider the function $f(x)=\frac{1}{x}$. Clearly as $x$ gets very
