mean value theorem wip

--- a/notes/derivatives3.tex
+++ b/notes/derivatives3.tex
@@ -115,7 +115,23 @@ $x\in(a,b)$ such that $f'(x)=0$.
 
 \textbf{Theorem 4 (Mean value theorem).}
 
-TODO
+Let $f$ be continuous on $[a,b]$ and differentiable on $(a,b)$. Then
+there exists $x\in(a,b)$ such that:
+\[f'(x)=\frac{f(b)-f(a)}{b-a}\]
+
+Here are three intuitions:
+\begin{enumerate}
+\item \textit{Geometric intuition.} There exists line a tagent to $f$
+  parallel to the line between the endpoints (i.e. line between
+  $(a, f(a))$ and $(b, f(b))$).
+\item \textit{Algebraic intuition.} There exists a point $x$ at which
+  instantaneous rate of change of $f$ is equal to the average change
+  of $f$ on $[a,b]$.
+\item \textit{Physical intuition.} If you travel 60 miles in one hour,
+  at some point you must have been travelling exactly 60 miles per
+  hour.
+\end{enumerate}
+
 
 \subsection{Increasing and decreasing functions}
 \subsection{Graph sketching}
