--- a/notes/derivatives.tex
+++ b/notes/derivatives.tex
@@ -259,7 +259,7 @@ must first find the linear equation that describes the tagent line,
 which we will now do. We'll then address the question of intersection
 for quadratic and cubic functions.
 
-\subsubsection*{Point-slope form}
+\subsubsection*{Point-slope form}\label{subsubsec-point-slope-form}
 The slope $m$ of a line is determined by
 \[m=\frac{y-y_1}{x-x_1}\]
 
