--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -35,7 +35,9 @@
 \clearpage
 \input{derivatives2b.tex}
 \clearpage
-\input{derivatives3.tex}
+\input{derivatives3a.tex}
+\clearpage
+\input{derivatives3b.tex}
 
 \end{document}
 
