--- a/notes/derivatives3a.tex
+++ b/notes/derivatives3a.tex
@@ -1,7 +1,11 @@
 
 \section{Derivatives, Part IIIa (Consequences)}
 
-\subsection{Maxima and manima, part I}
+I reordered some content from Spivak's chapter for clarity, but kept
+theorem and corollary numbering scheme. Thus theorem numbers here
+aren't in order (but they match the numbers in Spivak).
+
+\subsection{Maxima and manima}
 We start with some definitions. Let $f$ be a function and $A$ a set of
 numbers contained in $f$'s domain.\footnote{$A$ need not have any
   additional properties. E.g. it may have holes, etc.} Then:
@@ -11,12 +15,6 @@ numbers contained in $f$'s domain.\footnote{$A$ need not have any
 \textbf{Definition.} A point $x$ in $A$ is a \textbf{maximum
   point} for $f$ on $A$ if
 \[f(x)\geq f(y)\qquad\text{for every $y$ in $A$}\]
-
-\textbf{Definition.} A point $x$ in $A$ is a \textbf{local maximum
-  point} for $f$ on $A$ if there is some $\delta>0$ such that $x$ is a
-maximum point for $f$ on $A\cap(x-\delta, x+\delta)$.
-
-\vs
 
 \textbf{Definition.} A \textbf{critical point} of $f$ is a number $x$
 such that $f'(x)=0$.\footnote{If $x$ is a maximum and/or critical
@@ -78,24 +76,13 @@ differentiable at $x$, then $f'(x)=0$.
 \textbf{Proof.} Let $g=-f$. Then $x$ is a maximum point of $g$. By 1a,
 $g'(x)=0$, thus $(-f)'(x)=-1\cdot f'(x)=0$, and thus $f'(x)=0$ as desired.
 
-\vs
-
-\textbf{Theorem 2.} If $f$ is defined on $(a,b)$ and has a local
-maximum (or minimum) at $x$, and $f$ is differentiable at $x$, then
-$f'(x)=0$.
-
-\vs
-
-\textbf{Proof.} The proof is a trivial application of theorem 1 to $f$
-on $(x-\delta, x+\delta)$.
-
 \vs---\vs
 
 The obvious (extremely valuable) consequences of these theorems is
 that we can find minimum and maximum values of $f$ by solving for
 $f'(x)=0$.
 
-\subsection{Mean value theorem}
+\subsection{Mean Value Theorem}
 
 \textbf{Theorem 3 (Rolle's theorem).} Let $f$ be continuous on $[a,b]$
 differentiable on $(a,b)$, and let $f(a)=f(b)$. Then there exists
@@ -239,9 +226,27 @@ $f$ is decreasing on the interval.
 
 \textbf{Proof.} The proof is an obvious modification of 3a.
 
-\subsection{Graph sketching}
+\vs---\vs
 
-\subsection{Maxima and manima, part II}
+
+
+\subsection{Local maxima and manima}
+\textbf{Definition.} A point $x$ in $A$ is a \textbf{local maximum
+  point} for $f$ on $A$ if there is some $\delta>0$ such that $x$ is a
+maximum point for $f$ on $A\cap(x-\delta, x+\delta)$.
+
+\vs
+
+\textbf{Theorem 2.} If $f$ is defined on $(a,b)$ and has a local
+maximum (or minimum) at $x$, and $f$ is differentiable at $x$, then
+$f'(x)=0$.
+
+\vs
+
+\textbf{Proof.} The proof is a trivial application of theorem 1 to $f$
+on $(x-\delta, x+\delta)$.
+
+\subsection{Graph sketching}
 
 \subsection{L'H\^opital's rule}
 
