made progress on theorem 7 definition

--- a/notes/derivatives2a.tex
+++ b/notes/derivatives2a.tex
@@ -541,7 +541,7 @@ And finally a composition of four functions:
     x)\cdot \cos x
 \end{align*}
 
-\subsection{Sine polynomials}
+\subsection{Sine polynomials}\label{subsec-sine-poly}
 
 I don't think ``sine polynomials'' is a real name, but I needed a
 clever name for this section. Here we explore derivatives of functions
